# ndi-find-c

./: CMakeLists.txt
cmake/Modules/: FindNDI.cmake
src/: main.c  main.cpp
